fix spacing of blog cards

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -151,7 +151,7 @@ footer {
 .blog-post-area {
     display: flex;
     flex-wrap:wrap;
-    justify-content: space-between;
+   justify-content: space-evenly;
    
 
    
